adding some basic text to the paper

--- a/ISAV_Alpine.bib
+++ b/ISAV_Alpine.bib
@@ -15,3 +15,64 @@
  address = {New York, NY, USA},
 } 
 
+@inproceedings{peterka_ldav11,
+	author = "Tom Peterka and Robert Ross and Wesley Kendall and Attila Gyulassy and Valerio Pascucci and Han-Wei Shen and Teng-Yok Lee and Abon Chaudhuri",
+	title = "Scalable Parallel Building Blocks for Custom Data Analysis",
+	booktitle = "Proceedings of Large Data Analysis and Visualization Symposium LDAV'11",
+	address = "Providence, RI",
+	year = "2011"
+}
+
+@online{conduit,
+	author = {Lawrence Livermore National Laboratory},
+	title = {Conduit: Simplified Data Exchange for HPC Simulations},
+	year = 2017,
+	url = {https://software.llnl.gov/conduit/},
+	urldate = {2017-08-01}
+}
+
+@inproceedings{AhrensCinema,
+	author = {Ahrens, James and Jourdain, S{\'e}bastien and O'Leary, Patrick and Patchett, John and Rogers, David H. and Petersen, Mark},
+	title = {An Image-based Approach to Extreme Scale in Situ Visualization and Analysis},
+	booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+	series = {SC '14},
+	year = {2014},
+	isbn = {978-1-4799-5500-8},
+	location = {New Orleans, Louisana},
+	pages = {424--434},
+	numpages = {11},
+	url = {https://doi.org/10.1109/SC.2014.40},
+	doi = {10.1109/SC.2014.40},
+	acmid = {2683640},
+	publisher = {IEEE Press},
+	address = {Piscataway, NJ, USA},
+} 
+
+@inproceedings{Lofstead2008,
+	author = {Lofstead, Jay F. and Klasky, Scott and Schwan, Karsten and Podhorszki, Norbert and Jin, Chen},
+	title = {Flexible IO and Integration for Scientific Codes Through the Adaptable IO System (ADIOS)},
+	booktitle = {Proceedings of the 6th International Workshop on Challenges of Large Applications in Distributed Environments},
+	series = {CLADE '08},
+	year = {2008},
+	isbn = {978-1-60558-156-9},
+	location = {Boston, MA, USA},
+	pages = {15--24},
+	numpages = {10},
+	url = {http://doi.acm.org/10.1145/1383529.1383533},
+	doi = {10.1145/1383529.1383533},
+	acmid = {1383533},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {HDF-5, MPI-IO, modular IO, visualization, workflow},
+} 
+
+@article{Moreland:CGA2016,
+	author = {Kenneth Moreland and Christopher Sewell and William Usher and Lita Lo and Jeremy Meredith and David Pugmire and James Kress and Hendrik Schroots and Kwan-Liu Ma and Hank Childs and Matthew Larsen and Chun-Ming Chen and Robert Maynard and Berk Geveci},
+	title = {{VTK-m: Accelerating the Visualization Toolkit for Massively Threaded Architectures}},
+	journal ={IEEE Computer Graphics and Applications (CG\&A)},
+	volume = {36},
+	number = {3},
+	Month = may # {/} # jun,
+	pages = {48-58},
+	year ={2016},
+}
