adding some rough text on contributions

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -32,10 +32,17 @@
 \title{Alpine In Situ Infrastructure: Rising from the Ashes of Strawman}
 \titlenote{Produces the permission block, and
   copyright information}
-\subtitle{Authors in alphabetical order:}
+\subtitle{Middle authors in alphabetical order:}
 \subtitlenote{The full version of the author's guide is available as
   \texttt{acmart.pdf} document}
 
+\author{Matthew Larsen}
+\affiliation{\institution{Lawrence Livermore National Lab}}
+\email{larsen30@llnl.gov}
+
+\author{James Arhens}
+\affiliation{\institution{Los Alamos National Lab}}
+\email{arhens@lanl.gov}
 
 \author{Utkarsh Ayachit}
 \affiliation{\institution{Kitware, Inc}}
@@ -49,7 +56,6 @@
 \affiliation{\institution{University of Oregon}}
 \email{hank@uoregon.edu}
 
-
 \author{Berk Geveci}
 \affiliation{\institution{Kitware, Inc}}
 \email{berk.geveci@kitware.com}
@@ -58,9 +64,7 @@
 \affiliation{\institution{Lawrence Livermore National Lab}}
 \email{cyrush@llnl.gov}
 
-\author{Matthew Larsen}
-\affiliation{\institution{Lawrence Livermore National Lab}}
-\email{larsen30@llnl.gov}
+
 
 % The default list of authors is too long for headers}
 \renewcommand{\shortauthors}{Humans et al.}
