--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -134,6 +134,7 @@ ACM SIG Proceedings.\footnote{This is an abstract footnote}
 \input{interface.inc}
 
 \input{architecture.inc}
+\input{results.inc}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ISAV_Alpine} 
