added first pass at flow section

--- a/ISAV_Alpine.bib
+++ b/ISAV_Alpine.bib
@@ -76,3 +76,14 @@
 	pages = {48-58},
 	year ={2016},
 }
+
+@inproceedings{cyrush_pyhpc2012,
+author={C. Harrison and P. Navr\`{a}til and M. Moussalem and M. Jiang and H. Childs}, 
+booktitle={Proceedings of the 2012 Workshop on Python for High Performance and Scientific Computing}, 
+title={Efficient Dynamic Derived Field Generation on Many-Core Architectures Using Python}, 
+series = {PyHPC 2012},
+year={2012}, 
+pages={583-592}, 
+keywords={data visualisation;filtering theory;large-scale systems;multiprocessing systems;parallel processing;pipeline processing;program testing;HPC environment;OpenCL;analysis systems;data movement;efficient dynamic derived field generation;execution strategies;filter pipeline;flexible Python-based framework;large-scale simulation;many-core architectures;memory constraints;runtime performance;visualization systems;vortex detection application;hpc;opencl;python;scientific visualization}, 
+doi={10.1109/SC.Companion.2012.82}, 
+month={Nov},}
