adding hanks text

--- a/ISAV_Alpine.bib
+++ b/ISAV_Alpine.bib
@@ -15,6 +15,37 @@
  address = {New York, NY, USA},
 } 
 
+@article{messina2017exascale,
+  title={The Exascale Computing Project},
+  author={Messina, Paul},
+  journal={Computing in Science \& Engineering},
+  volume={19},
+  number={3},
+  pages={63--67},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{Bauer:InSitu-STAR:2016,
+   author = {Andrew C. Bauer and Hasan Abbasi and James Ahrens and Hank Childs and Berk Geveci and Scott Klasky and Kenneth Moreland and Patrick O'Leary and Venkatram Vishwanath and Brad Whitlock and E. Wes Bethel},
+  title = {{\textit{In Situ} Methods, Infrastructures, and Applications on High Performance Computing Platforms, a State-of-the-art (STAR) Report}},
+  journal = {Computer Graphics Forum, Proceedings of Eurovis 2016},
+  publisher = {Wiley-Blackwell},
+  address = {Gr\"oningen, Netherlands},
+  month = jun,
+  year = 2016,
+  volume = 35,
+  number = 3,
+  note = {LBNL-1005709},
+}
+
+@article{team2000r,
+  title={R language definition},
+  author={Team, R Core},
+  journal={Vienna, Austria: R foundation for statistical computing},
+  year={2000}
+}
+
 @inproceedings{peterka_ldav11,
 	author = "Tom Peterka and Robert Ross and Wesley Kendall and Attila Gyulassy and Valerio Pascucci and Han-Wei Shen and Teng-Yok Lee and Abon Chaudhuri",
 	title = "Scalable Parallel Building Blocks for Custom Data Analysis",
@@ -66,6 +97,35 @@
 	keywords = {HDF-5, MPI-IO, modular IO, visualization, workflow},
 } 
 
+@inproceedings{EAVL,
+booktitle = {Eurographics Symposium on Parallel Graphics and Visualization},
+title = {{EAVL: The Extreme-scale Analysis and Visualization Library}},
+author = {Meredith, Jeremy S. and Ahern, Sean and Pugmire, Dave and Sisneros, Robert},
+year = {2012},
+publisher = {The Eurographics Association},
+}
+
+@inproceedings{DIY,
+  title={Scalable parallel building blocks for custom data analysis},
+  author={Peterka, Tom and Ross, Robert and Gyulassy, Attila and Pascucci, Valerio and Kendall, Wesley and Shen, Han-Wei and Lee, Teng-Yok and Chaudhuri, Abon},
+  booktitle={Large Data Analysis and Visualization (LDAV), 2011 IEEE Symposium on},
+  pages={105--112},
+  year={2011},
+  organization={IEEE}
+}
+
+
+@article{MPI,
+  title={A high-performance, portable implementation of the MPI message passing interface standard},
+  author={Gropp, William and Lusk, Ewing and Doss, Nathan and Skjellum, Anthony},
+  journal={Parallel computing},
+  volume={22},
+  number={6},
+  pages={789--828},
+  year={1996},
+  publisher={Elsevier}
+}
+
 @article{Moreland:CGA2016,
 	author = {Kenneth Moreland and Christopher Sewell and William Usher and Lita Lo and Jeremy Meredith and David Pugmire and James Kress and Hendrik Schroots and Kwan-Liu Ma and Hank Childs and Matthew Larsen and Chun-Ming Chen and Robert Maynard and Berk Geveci},
 	title = {{VTK-m: Accelerating the Visualization Toolkit for Massively Threaded Architectures}},
@@ -77,6 +137,26 @@
 	year ={2016},
 }
 
+@InCollection{VisIt,
+  author = {Hank Childs and Eric Brugger and Brad Whitlock and Jeremy Meredith and Sean Ahern and David Pugmire and Kathleen Biagas and Mark Miller and Cyrus Harrison and Gunther H. Weber and Hari Krishnan and Thomas Fogal and Allen Sanderson and Christoph Garth and E. Wes Bethel and David Camp and Oliver R\"{u}bel and Marc Durant and Jean M. Favre  and Paul Navr\'{a}til},
+  title = {{VisIt: An End-User Tool For Visualizing and Analyzing Very Large Data}},
+   year =      "2012",
+   pages = "357--372",
+  month = oct,
+  booktitle = {{High Performance Visualization---Enabling Extreme-Scale Scientific Insight}},
+  publisher = {CRC Press/Francis--Taylor Group},
+}
+
+@inproceedings{LibSim,
+ author = {Whitlock, Brad and Favre, Jean M. and Meredith, Jeremy S.},
+ title = {{Parallel in Situ Coupling of Simulation with a Fully Featured Visualization System}},
+ booktitle = {Proceedings of the 11th Eurographics Conference on Parallel Graphics and Visualization (EGPGV)},
+ month = apr,
+ year = {2011},
+ pages = {101--109},
+} 
+
+
 @inproceedings{cyrush_pyhpc2012,
 author={C. Harrison and P. Navr\`{a}til and M. Moussalem and M. Jiang and H. Childs}, 
 booktitle={Proceedings of the 2012 Workshop on Python for High Performance and Scientific Computing}, 
@@ -87,3 +167,30 @@ pages={583-592},
 keywords={data visualisation;filtering theory;large-scale systems;multiprocessing systems;parallel processing;pipeline processing;program testing;HPC environment;OpenCL;analysis systems;data movement;efficient dynamic derived field generation;execution strategies;filter pipeline;flexible Python-based framework;large-scale simulation;many-core architectures;memory constraints;runtime performance;visualization systems;vortex detection application;hpc;opencl;python;scientific visualization}, 
 doi={10.1109/SC.Companion.2012.82}, 
 month={Nov},}
+
+@article{ParaView,
+  title={Paraview: An end-user tool for large data visualization},
+  author={Ahrens, James and Geveci, Berk and Law, Charles},
+  journal={The Visualization Handbook},
+  volume={717},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@inproceedings{Catalyst,
+  title={Paraview catalyst: Enabling in situ data analysis and visualization},
+  author={Ayachit, Utkarsh and Bauer, Andrew and Geveci, Berk and O'Leary, Patrick and Moreland, Kenneth and Fabian, Nathan and Mauldin, Jeffrey},
+  booktitle={Proceedings of the First Workshop on In Situ Infrastructures for Enabling Extreme-Scale Analysis and Visualization},
+  pages={25--29},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{adios,
+  title={Flexible io and integration for scientific codes through the adaptable io system (adios)},
+  author={Lofstead, Jay F and Klasky, Scott and Schwan, Karsten and Podhorszki, Norbert and Jin, Chen},
+  booktitle={Proceedings of the 6th international workshop on Challenges of large applications in distributed environments},
+  pages={15--24},
+  year={2008},
+  organization={ACM}
+}
