--- a/ISAV_Alpine.bib
+++ b/ISAV_Alpine.bib
@@ -194,3 +194,20 @@ month={Nov},}
   year={2008},
   organization={ACM}
 }
+
+@online{conduit_blueprint,
+	author = {Lawrence Livermore National Laboratory},
+	title = {Conduit: Simplified Data Exchange for HPC Simulations - Conduit Blueprint},
+	year = 2017,
+	url = {https://software.llnl.gov/conduit/blueprint.html},
+	urldate = {2017-08-01}
+}
+
+@online{mfem-library,
+  title={{MFEM}: Modular finite element methods},
+	year = 2017,
+	url = {http://mfem.org},
+	urldate = {2017-08-01}
+}
+
+
