--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -29,7 +29,7 @@
 
 
 \begin{document}
-\title{The ALPINE In Situ Infrastructure: \\ Rising from the Ashes of Strawman}
+\title{The ALPINE In Situ Infrastructure: \\ Ascending from the Ashes of Strawman}
 \titlenote{Produces the permission block, and
   copyright information}
 \subtitle{Middle authors in alphabetical order:}
