--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -77,7 +77,7 @@ This paper introduces ALPINE, a flyweight in situ infrastructure.
 The infrastructure is designed for leading-edge supercomputers, and
 has support for both distributed-memory and shared-memory parallelism.
 %
-It can take advantage of computing power on both conventional CPU architecture
+It can take advantage of computing power on both conventional CPU architectures
 and on many-core architectures such as NVIDIA GPUs or the Intel Xeon Phi.
 %
 Further, it has a flexible design that allows support for integrating new
