--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -128,7 +128,7 @@ on initial experiments performed using the infrastructure.
 \newcommand{\fix}[1]{\textcolor{red}{#1}}
 
 \lstset{language=C++,
-	basicstyle=\ttfamily,
+	basicstyle=\ttfamily\small,
 	showstringspaces=false,
 	keywordstyle=\color{blue}\ttfamily,
 	stringstyle=\color{red}\ttfamily,
