add some relevant keywords

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -117,7 +117,7 @@ on initial experiments performed using the infrastructure.
 \ccsdesc[500]{Computing methodologies~Ray tracing}
 
 
-\keywords{ACM proceedings, \LaTeX, text tagging}
+\keywords{HPC, Scientific Visualization, In situ}
 
 \newcommand{\fix}[1]{\textcolor{red}{#1}}
 
