adding initial results text

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -30,11 +30,11 @@
 
 \begin{document}
 \title{The ALPINE In Situ Infrastructure: \\ Ascending from the Ashes of Strawman}
-\titlenote{Produces the permission block, and
-  copyright information}
-\subtitle{Middle authors in alphabetical order:}
-\subtitlenote{The full version of the author's guide is available as
-  \texttt{acmart.pdf} document}
+%\titlenote{Produces the permission block, and
+%  copyright information}
+%\subtitle{Middle authors in alphabetical order:}
+%\subtitlenote{The full version of the author's guide is available as
+%  \texttt{acmart.pdf} document}
 
 \author{Matthew Larsen}
 \affiliation{\institution{Lawrence Livermore National Lab}}
@@ -139,6 +139,8 @@ a
 
 \input{architecture.inc}
 \input{results.inc}
+
+\section{Conclusion}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ISAV_Alpine} 
