first pass at conclusion

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -157,6 +157,18 @@ on initial experiments performed using the infrastructure.
 \input{architecture.inc}
 \input{results.inc}
 \section{Conclusion}
+We decribed the ALPINE in situ infrastructure which is an evolution of Strawman, and the APLINE interface designed to enable stakeholders to easily describe transform data, make pictures, and capture data.
+%
+VTK-h is hybrid-parallel filter library that functions as a single point to deploy in situ algorithms into ALPINE, ParaView, ad VisIt.
+%
+Flow provides both an execution model for VTK-h and the flexibility to enable interoperability with other software.
+%
+For future work, we will continue to develop VTK-h and ALPINE capabilities, and we will work with ECP applications teams to integrate ALPINE.
+ 
+\begin{figure}
+	\includegraphics[width=3cm]{images/kripke}
+	\caption{\label{kripke}Image produced using the operations described in Section~\ref{sec:results}.}
+\end{figure}
 \input{acks.inc}
 
 
