removing silly acm reference format

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -27,6 +27,8 @@
 
 \acmPrice{15.00}
 
+% turn off silly acm reference format
+\settopmatter{printacmref=false}
 
 \begin{document}
 \title{The ALPINE In Situ Infrastructure: \\ Ascending from the Ashes of Strawman}
