--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -160,18 +160,18 @@ on initial experiments performed using the infrastructure.
 \input{results.inc}
 \section{Conclusion}
 
-We described the new ALPINE in situ interface and ALPINE's infrastructure components VTK-h, Flow, and Ascent.
+This paper introduced the ALPINE in situ interface and ALPINE's infrastructure components VTK-h, Flow, and Ascent.
 %
-This new interface and these components enable simulation users to easily execute in situ visualization and analysis algorithms
+The new interface and these components enable simulation users to easily execute in situ visualization and analysis algorithms
 on modern supercomputing architectures. 
 %
-The ALPINE interface and Ascent runtime are evolutions of the Strawman in situ viz mini-app. ALPINE is aimed at production, and it includes significant additions to support a wider range use cases than Strawman. We demonstrated this with an example of transforming data and rendering multiple plots with in a Kripke simulation. 
+The ALPINE interface and Ascent runtime are evolutions of the Strawman in situ visualization mini-app. ALPINE is aimed at production, and it includes significant additions to support a wider range of use cases than Strawman. We demonstrated this with a basic example of transforming data and rendering multiple plots within a Kripke simulation. 
 %
 %VTK-h is new filter library that will serve as a single point to deploy hybrid-parallel in situ algorithms into Ascent, ParaView, and VisIt.
 %In addition, the ALPINE Ascent runtime profides flexibility to enable interoperability with other software ecosystems. 
 %
 %
-For future work, we will continue to develop VTK-h and ALPINE capabilities, and we will work with ECP applications teams to integrate ALPINE.
+For future work, we will continue to develop VTK-h and ALPINE capabilities, and we will work with ECP application teams to deploy in situ visualization and analysis algorithms to simulation users via ALPINE.
  
 \begin{figure}
 	\includegraphics[width=3cm]{images/kripke}
