adding release number and US Gov copyright statement

--- a/ISAV_Alpine.tex
+++ b/ISAV_Alpine.tex
@@ -14,19 +14,14 @@
 %\setcopyright{cagovmixed}
 
 
-% DOI
-\acmDOI{10.475/123_4}
-
-% ISBN
-\acmISBN{123-4567-24-567/08/06}
-
-%Conference
-\acmConference[ISAV 2017]{ISAV 2017: In Situ Infrastructures for Enabling Extreme-scale Analysis and Visualization}{November 2017}{Denver, Colorado USA} 
+%Conference 
 \acmYear{2017}
 \copyrightyear{2017}
-
+\setcopyright{usgovmixed}
+\acmConference{ISAV'17}{November 12--17, 2017}{Denver, CO, USA}
 \acmPrice{15.00}
-
+\acmDOI{10.1145/3144769.3144778} 
+\acmISBN{978-1-4503-5139-3/17/11}
 % turn off silly acm reference format
 \settopmatter{printacmref=false}
 
