addressing reviewer feedback

--- a/ISAV_Alpine.bib
+++ b/ISAV_Alpine.bib
@@ -201,4 +201,14 @@ month={Nov},}
 	urldate = {2017-08-01}
 }
 
-
+@inproceedings{AyachitSENSEI,
+	author = {Ayachit, Utkarsh and Whitlock, Brad and Wolf, Matthew and Loring, Burlen and Geveci, Berk and Lonie, David and Bethel, E. Wes},
+	title = {The SENSEI Generic in Situ Interface},
+	booktitle = {Proceedings of the 2Nd Workshop on In Situ Infrastructures for Enabling Extreme-scale Analysis and Visualization},
+	series = {ISAV '16},
+	year = {2016},
+	isbn = {978-1-5090-3872-5},
+	location = {Salt Lake City, Utah},
+	pages = {40--44},
+	keywords = {application programming interfaces, computer aided analysis, high performance computing, scientific computing}
+} 
